Share build.gradle configuration